<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_PRES_CNTRL_CONTROL" Id="{ff19fe30-cb2d-448a-9957-521d1c6c14a7}">
    <Declaration><![CDATA[TYPE TYP_PRES_CNTRL_CONTROL :
STRUCT
	Execute : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>