<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_PRES_CNTRL_STATUS" Id="{2269fbc7-85e5-4855-95c9-ff7e61aac3a3}">
    <Declaration><![CDATA[TYPE TYP_PRES_CNTRL_STATUS :
STRUCT
	Done : BOOL;
	Executing: BOOL;
	Error : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>